# x.h

./: CMakeLists.txt  LICENSE  NeuHConfig.cmake  NeuHConfigVersion.cmake  README.md  n.h  neu.h  x.h
c/: README.md  x.h
c/test/c/: CMakeLists.txt  test_x_err.c  test_x_timing.c
c/test/cuda/: CMakeLists.txt
cmake/: NeuHConfig.cmake.in  NeuHConfigVersion.cmake.in  neu.h.cmake
cpp/: README.md  x.h
cpp/test/cpp/: CMakeLists.txt  test_x_err.cpp  test_x_gadget.cpp  test_x_timing.cpp
cpp/test/cuda/: .clangd  CMakeLists.txt  test_x_err.cu
include/: neu.h
test/: .gitignore  CMakeLists.txt  test_x_err.c  test_x_err.cu  test_x_tictoc.c
