CMAKE_MINIMUM_REQUIRED(VERSION 3.18 FATAL_ERROR)
PROJECT(x_test LANGUAGES C)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_STANDARD_REQUIRED ON)

# NOTE: This is required to make x_narg work with MSVC.
IF(MSVC)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Zc:preprocessor")
ENDIF()

ADD_COMPILE_DEFINITIONS(X_ENABLE_ATOMIC=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_CONCURRENCY=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

ADD_EXECUTABLE(test_x_err test_x_err.c)
ADD_EXECUTABLE(test_x_timing test_x_timing.c)
