CMAKE_MINIMUM_REQUIRED(VERSION 3.25 FATAL_ERROR)
PROJECT(x_test LANGUAGES CXX)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_COMPILE_DEFINITIONS(X_ENABLE_ATOMIC=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

ADD_EXECUTABLE(test_x_gadget test_x_gadget.cpp)

ADD_EXECUTABLE(test_x_err test_x_err.cpp)
ADD_EXECUTABLE(test_x_timing test_x_timing.cpp)
