CMAKE_MINIMUM_REQUIRED(VERSION 3.25 FATAL_ERROR)
PROJECT(x_test LANGUAGES CXX CUDA)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_COMPILE_DEFINITIONS(X_ENABLE_ATOMIC=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

ADD_EXECUTABLE(test_x_err_cu test_x_err.cu)
SET_TARGET_PROPERTIES(test_x_err_cu PROPERTIES
  COMPILE_DEFINITIONS "X_ENABLE_CUDA=1"
  CUDA_ARCHITECTURES 80  # Testing on 4060, but I'm not sure about the gencode.
)
